--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -20,6 +20,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#sobre">Sobre</a></li>
+          <li><a target="_blank" href="cadastro.html">Cadastro</a></li>
         </ul>
       </nav>
     </header>
