--- a/cadastro.html
+++ b/cadastro.html
@@ -81,6 +81,18 @@
             
           </div>
         </div>
+
+      <div>
+
+        <button type="submit">Cadastrar</button>
+        <button type="reset">Limpar</button>
+       
+      </div>
+
+
+
+
+
       </form>
     </main>
   </body>
