Enviando o checkPoint_02 completo

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <h1>Curiosidades</h1>
         <ul>
           <li><a target="_blank" href="#">Porto da Pedra</a></li>
-          <li><a target="_blank" href="#">Fazenda Colubandê</a></li>
-          <li><a target="_blank" href="#">Teatro Municipal</a></li>
+          <li><a target="_blank" href="#">Batalhão</a></li>
+          <li><a target="_blank" href="#">Praia da Luz</a></li>
         </ul>
         <p>
           O município de <b>São Gonçalo</b>, no Estado do Rio de Janeiro, tem
