Enviando os arquivos js para o checkpoint

--- a/cadastro.html
+++ b/cadastro.html
@@ -12,6 +12,10 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
 
     <title>Cadastro</title>
   </head>
@@ -27,7 +31,7 @@
     </header>
 
     <main>
-      <form>
+      <form class="form">
         <legend>Cadastro de Interesses</legend>
         <div>
           <label for="name">Nome:</label>
@@ -112,7 +116,9 @@
           </div>
         </section>
         <section class="fotos">
+          
           <div class="content-fotos">
+          
             <div class="content-img">
               <img
                 class="icons-pessoal"
@@ -185,6 +191,8 @@
         </section>
       </section>
     </main>
-    <footer></footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
