--- a/cadastro.html
+++ b/cadastro.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
     />
+    <link rel="icon" href="./assets/images/Logo.png">
 
     <title>Cadastro</title>
   </head>
@@ -192,7 +193,6 @@
       </section>
     </main>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
