--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
     />
+    <link rel="icon" href="./assets/images/Logo.png" />
     <title>São Gonçalo</title>
   </head>
   <body>
     <header>
       <nav>
-        <h1><a href="#">São Gonçalo</a></h1>
+        
+        <h1><a href="#">São Gonçalo</a></h1> 
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#sobre">Sobre</a></li>
@@ -74,7 +76,6 @@
       </section>
     </main>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
